Updated client to utilize FlatBuffers and updated project folder structure

--- a/CohnectSDK/CohnectSDK.csproj
+++ b/CohnectSDK/CohnectSDK.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>cohnect_sdk</RootNamespace>
+    <RootNamespace>CohnectSDK</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SpanJson" Version="4.2.1" />
+    <PackageReference Include="Google.FlatBuffers" Version="24.3.25" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
-
 </Project>
