--- a/CohnectSDK.Sample/test-client.csproj
+++ b/CohnectSDK.Sample/test-client.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\cohnect-sdk.csproj" />
+    <ProjectReference Include="../CohnectSDK/CohnectSDK.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>test_client</RootNamespace>
+    <RootNamespace>CohnectSDKTestClient</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
